// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button-snapshot Default Large Button 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <a
    className="sc-AxhCb gApUJa"
    href="/"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    theme={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "backgroundColor": "#F9423A",
        "border": "none",
        "color": "white",
        "display": "flex",
        "focus": Object {
          "outline": "none",
        },
        "height": Array [
          60,
          0.7,
          60,
        ],
        "hover": Object {
          "backgroundColor": "#999999",
          "color": "white",
          "cursor": "pointer",
        },
        "icon": Object {
          "mobile": Object {
            "marginRight": -7,
          },
          "size": Array [
            17,
            0.7,
            17,
          ],
        },
        "justifyContent": "space-between",
        "lineHeight": Array [
          21,
          0.7,
          21,
        ],
        "marginLeft": "auto",
        "padding": "calc(1.8rem + 0.8 * ((100vw - 76.8rem) / 91.2)) calc(1.7rem + 0.7 * ((100vw - 76.8rem) / 91.2))",
        "print": Object {
          "display": "none",
        },
        "size": Array [
          14,
          0.7,
          14,
        ],
        "textTransform": "uppercase",
        "weight": 600,
        "width": Array [
          150,
          0.7,
          150,
        ],
      }
    }
    title="hello"
  >
    Read More 22
  </a>
</div>
`;

exports[`Storyshots Components/Button-snapshot With Icon Large Button 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <a
    className="sc-AxhCb gApUJa"
    href="/"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    theme={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "backgroundColor": "#F9423A",
        "border": "none",
        "color": "white",
        "display": "flex",
        "focus": Object {
          "outline": "none",
        },
        "height": Array [
          60,
          0.7,
          60,
        ],
        "hover": Object {
          "backgroundColor": "#999999",
          "color": "white",
          "cursor": "pointer",
        },
        "icon": Object {
          "mobile": Object {
            "marginRight": -7,
          },
          "size": Array [
            17,
            0.7,
            17,
          ],
        },
        "justifyContent": "space-between",
        "lineHeight": Array [
          21,
          0.7,
          21,
        ],
        "marginLeft": "auto",
        "padding": "calc(1.8rem + 0.8 * ((100vw - 76.8rem) / 91.2)) calc(1.7rem + 0.7 * ((100vw - 76.8rem) / 91.2))",
        "print": Object {
          "display": "none",
        },
        "size": Array [
          14,
          0.7,
          14,
        ],
        "textTransform": "uppercase",
        "weight": 600,
        "width": Array [
          150,
          0.7,
          150,
        ],
      }
    }
    title="hello"
  >
    Read More 22
  </a>
</div>
`;

exports[`Storyshots Components/UpcomingEventFlag-snapshot Next Month Version 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <span
    className="sc-AxiKw jNDrcB next-month"
  >
    Next Month
  </span>
</div>
`;

exports[`Storyshots Components/UpcomingEventFlag-snapshot Next Week Version 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <span
    className="sc-AxiKw jNDrcB next-week"
  >
    Next Week
  </span>
</div>
`;

exports[`Storyshots Components/UpcomingEventFlag-snapshot This Month Version 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <span
    className="sc-AxiKw jNDrcB next-month"
  >
    Next Month
  </span>
</div>
`;

exports[`Storyshots Components/UpcomingEventFlag-snapshot This Week Version 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <span
    className="sc-AxiKw jNDrcB this-week"
  >
    This Week
  </span>
</div>
`;

exports[`Storyshots Components/UpcomingEventFlag-snapshot Today Version 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <span
    className="sc-AxiKw jNDrcB today"
  >
    Today
  </span>
</div>
`;

exports[`Storyshots Components/UpcomingEventFlag-snapshot Tomorrow Version 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <span
    className="sc-AxiKw jNDrcB tomorrow"
  >
    Tomorrow
  </span>
</div>
`;

exports[`Storyshots Examples/Components/Button-snapshot Medium 1`] = `
<button>
  Medium
</button>
`;

exports[`Storyshots Examples/Components/Button-snapshot Small 1`] = `
<button>
  Small
</button>
`;

exports[`Storyshots Examples/Components/Button-snapshot Special 1`] = `
<button>
  Special
</button>
`;

exports[`Storyshots Sidebars/AssociatedPeopleWidget-snapshot More People Story 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <div
    className="sc-AxhUy fPPfJq sidebar-decorator"
  >
    <div
      className="sc-AxhUy glKepW"
    >
      <h3
        className="sc-AxgMl jCUaVI"
      >
        Related 
        People
      </h3>
      <li
        className="sc-AxheI bDlIit"
      >
        <a
          className="sc-AxhCb izKmox"
          href="/anthony-f-cavanaugh"
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          theme={
            Object {
              "color": "#F9423A",
              "display": "block",
              "hover": Object {
                "color": "#999999",
              },
              "lineHeight": Array [
                22,
                0.7,
                22,
              ],
              "marginBottom": Array [
                15,
                0.7,
                15,
              ],
              "maxWidth": Array [
                159,
                0.7,
                159,
              ],
              "minWidth": 95,
              "size": Array [
                18,
                0.7,
                18,
              ],
              "textDecoration": "underline",
              "weight": 600,
              "width": Array [
                159,
                0.3,
                159,
              ],
            }
          }
        >
          Anthony F Cavanaugh
        </a>
      </li>
      <li
        className="sc-AxheI bDlIit"
      >
        <a
          className="sc-AxhCb izKmox"
          href="/john-e-smith"
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          theme={
            Object {
              "color": "#F9423A",
              "display": "block",
              "hover": Object {
                "color": "#999999",
              },
              "lineHeight": Array [
                22,
                0.7,
                22,
              ],
              "marginBottom": Array [
                15,
                0.7,
                15,
              ],
              "maxWidth": Array [
                159,
                0.7,
                159,
              ],
              "minWidth": 95,
              "size": Array [
                18,
                0.7,
                18,
              ],
              "textDecoration": "underline",
              "weight": 600,
              "width": Array [
                159,
                0.3,
                159,
              ],
            }
          }
        >
          John Simon Supercalifragilistic 
        </a>
      </li>
      <li
        className="sc-AxheI bDlIit"
      >
        <a
          className="sc-AxhCb izKmox"
          href="/susan-l-kennedy"
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          theme={
            Object {
              "color": "#F9423A",
              "display": "block",
              "hover": Object {
                "color": "#999999",
              },
              "lineHeight": Array [
                22,
                0.7,
                22,
              ],
              "marginBottom": Array [
                15,
                0.7,
                15,
              ],
              "maxWidth": Array [
                159,
                0.7,
                159,
              ],
              "minWidth": 95,
              "size": Array [
                18,
                0.7,
                18,
              ],
              "textDecoration": "underline",
              "weight": 600,
              "width": Array [
                159,
                0.3,
                159,
              ],
            }
          }
        >
          Susan L Kennedy
        </a>
      </li>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebars/AssociatedPeopleWidget-snapshot Two People Story 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <div
    className="sc-AxhUy fPPfJq sidebar-decorator"
  >
    <div
      className="sc-AxhUy glKepW"
    >
      <h3
        className="sc-AxgMl jCUaVI"
      >
        Related 
        People
      </h3>
      <div
        className="sc-AxhUy bJYuMz"
      >
        <a
          className="sc-AxhCb fVdxmw"
          href="/anthony-f-cavanaugh"
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          theme={Object {}}
        >
          <img
            alt="Photo of Anthony F Cavanaugh."
            className="sc-Axmtr iQDpny"
            height={185}
            src="http://pryorcashman-admin.gjtest.com/content/uploads/2020/01/Soloway_T_Thumb-default-headshot-closeup-headshot-photo-160.jpg"
            width={185}
          />
        </a>
        <div
          className="sc-AxhUy TDBYq"
        >
          <a
            className="sc-AxhCb eUdnLU"
            href="/anthony-f-cavanaugh"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            theme={
              Object {
                "color": "#000",
                "lineHeight": Array [
                  30,
                  0.7,
                  30,
                ],
                "size": Array [
                  23,
                  0.7,
                  23,
                ],
                "weight": 600,
              }
            }
          >
            Anthony F Cavanaugh
          </a>
        </div>
      </div>
      <div
        className="sc-AxhUy bJYuMz"
      >
        <a
          className="sc-AxhCb fVdxmw"
          href="/john-e-smith"
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          theme={Object {}}
        >
          <img
            alt="Photo of John Simon Supercalifragilistic ."
            className="sc-Axmtr iQDpny"
            height={185}
            src={
              Object {
                "process": [Function],
              }
            }
            width={185}
          />
        </a>
        <div
          className="sc-AxhUy TDBYq"
        >
          <a
            className="sc-AxhCb eUdnLU"
            href="/john-e-smith"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            theme={
              Object {
                "color": "#000",
                "lineHeight": Array [
                  30,
                  0.7,
                  30,
                ],
                "size": Array [
                  23,
                  0.7,
                  23,
                ],
                "weight": 600,
              }
            }
          >
            John Simon Supercalifragilistic 
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebars/AssociatedPracticesWidget-snapshot Two Practices 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <div
    className="sc-AxhUy fPPfJq sidebar-decorator"
  >
    <div
      className="sc-AxhUy glKepW"
    >
      <h3
        className="sc-AxgMl jCUaVI"
      >
        Related 
        Services/ Industries
      </h3>
      <ul
        className="sc-fzozJi kwdSmi"
      >
        <li
          className="sc-AxheI cDHBbh"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 sc-AxmLO bHBtan"
            data-icon="circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            theme={
              Object {
                "color": "#5C5C5C",
                "marginRight": Array [
                  15,
                  0.7,
                  15,
                ],
                "minHeight": Array [
                  5,
                  0.7,
                  5,
                ],
                "minWidth": Array [
                  5,
                  0.7,
                  5,
                ],
                "position": "relative",
                "size": Array [
                  5,
                  0.7,
                  5,
                ],
                "top": Array [
                  9,
                  0.7,
                  8,
                ],
              }
            }
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <a
            className="sc-AxhCb khvZws"
            href="/banking-finance"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            theme={
              Object {
                "color": "#F9423A",
                "hover": Object {
                  "color": "#999999",
                },
                "textDecoration": "underline",
              }
            }
          >
            Banking + Finance
          </a>
        </li>
        <li
          className="sc-AxheI cDHBbh"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 sc-AxmLO bHBtan"
            data-icon="circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            theme={
              Object {
                "color": "#5C5C5C",
                "marginRight": Array [
                  15,
                  0.7,
                  15,
                ],
                "minHeight": Array [
                  5,
                  0.7,
                  5,
                ],
                "minWidth": Array [
                  5,
                  0.7,
                  5,
                ],
                "position": "relative",
                "size": Array [
                  5,
                  0.7,
                  5,
                ],
                "top": Array [
                  9,
                  0.7,
                  8,
                ],
              }
            }
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <a
            className="sc-AxhCb khvZws"
            href="/insurance-recovery-counseling"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            theme={
              Object {
                "color": "#F9423A",
                "hover": Object {
                  "color": "#999999",
                },
                "textDecoration": "underline",
              }
            }
          >
            Insurance Recovery + Counseling
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebars/CallToActionWidget-snapshot Default Widget 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <div
    className="sc-AxhUy fPPfJq sidebar-decorator"
  >
    <div
      className="sc-AxhUy bHzWqi"
    >
      <h3
        className="sc-AxgMl jCUaVI"
      >
        Call to Action Widget
      </h3>
      <div
        className="sc-AxhUy hMFAuS"
      >
        <p>
          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
        </p>
      </div>
      <a
        className="sc-AxhCb dSEtKv"
        href="/"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        theme={
          Object {
            "after": Object {
              "backgroundColor": "#F9423A",
              "bottom": Array [
                -11,
                0.7,
                -11,
              ],
              "content": "\\" \\"",
              "height": Array [
                2,
                0.7,
                2,
              ],
              "left": 0,
              "position": "absolute",
              "width": "100%",
            },
            "alignItems": "center",
            "border": 0,
            "child": Object {
              "display": "none",
              "selector": "svg",
            },
            "color": "#F9423A",
            "cursor": "pointer",
            "display": "inline-flex",
            "font": "'Titillium Web', sans-serif",
            "hover": Object {
              "after": Object {
                "backgroundColor": "#999999",
              },
              "color": "#999999",
            },
            "icon": Object {},
            "lineHeight": Array [
              13,
              0.7,
              13,
            ],
            "marginTop": Array [
              45,
              0.7,
              45,
            ],
            "position": "relative",
            "size": Array [
              14,
              0.7,
              14,
            ],
            "textDecoration": "none",
            "textTransform": "uppercase",
            "weight": 700,
          }
        }
        title="This is a subscribe button"
      >
        Subscribe
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-w-6 sc-AxmLO hzEqCb"
          data-icon="angle-right"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          theme={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M187.8 264.5L41 412.5c-4.7 4.7-12.3 4.7-17 0L4.2 392.7c-4.7-4.7-4.7-12.3 0-17L122.7 256 4.2 136.3c-4.7-4.7-4.7-12.3 0-17L24 99.5c4.7-4.7 12.3-4.7 17 0l146.8 148c4.7 4.7 4.7 12.3 0 17z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebars/ImageWidget-snapshot Standard 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <div
    className="sc-AxhUy fPPfJq sidebar-decorator"
  >
    <div
      className="sc-AxhUy hmIUEw"
    >
      <img
        className="sc-Axmtr hBVTto"
        height={195}
        src="http://pryorcashman-admin.gjtest.com/content/uploads/2020/02/Real-Estate-default-widget-image-widget-image-3309.jpg"
        width={290}
      />
      <div
        className="sc-AxhUy csQPpo"
      >
        <p>
          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebars/PersonContact-snapshot Associated Person 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <div
    className="sc-AxhUy fPPfJq sidebar-decorator"
  >
    <div
      className="sc-AxhUy bJYuMz"
    >
      <a
        className="sc-AxhCb fVdxmw"
        href="/"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        theme={Object {}}
      >
        <img
          alt="Photo of Anthony F Cavanaugh."
          className="sc-Axmtr iQDpny"
          height={185}
          src="http://pryorcashman-admin.gjtest.com/content/uploads/2020/01/Soloway_T_Thumb-default-headshot-closeup-headshot-photo-160.jpg"
          width={185}
        />
      </a>
      <div
        className="sc-AxhUy TDBYq"
      >
        <a
          className="sc-AxhCb eUdnLU"
          href="/"
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          theme={
            Object {
              "color": "#000",
              "lineHeight": Array [
                30,
                0.7,
                30,
              ],
              "size": Array [
                23,
                0.7,
                23,
              ],
              "weight": 600,
            }
          }
        >
          Anthony F Cavanaugh
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebars/PersonContact-snapshot Contact 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <div
    className="sc-AxhUy fPPfJq sidebar-decorator"
  >
    <div
      className="sc-AxhUy bJYuMz"
    >
      <div
        className="sc-AxhUy TDBYq"
      >
        <span
          className="sc-AxiKw jmuqsC undefined "
          onClick={null}
          type=""
        >
          Anthony F Cavanaugh
        </span>
        <div
          className="sc-AxhUy jdSLmw"
        >
          Partner
        </div>
        <div
          className="sc-AxhUy gJpmIq"
        >
          <a
            className="sc-AxjAm chPwwH"
            href="tel:555-555-5555"
          >
            555-555-5555
          </a>
        </div>
        <a
          className="sc-AxjAm dXDwLC"
          href="mailto:test@test.com"
        >
          Email
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebars/VideoWidget-snapshot All Features 1`] = `
<div
  className="sc-AxhUy VgVfS"
>
  <div
    className="sc-AxhUy fPPfJq sidebar-decorator"
  >
    <div
      className="sc-AxhUy fwRfaE"
    >
      <div
        className="sc-AxhUy iHjqtx"
      >
        <div
          className="sc-AxhUy bxnSlx"
        >
          This content has been blocked because you have not consented to third-party cookies. 
          <a
            className="sc-AxhCb fVdxmw"
            href="/privacy-policy"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            theme={Object {}}
          >
            Read our cookie policy
          </a>
          .
        </div>
        <span
          className="sc-AxiKw dbJxUH undefined "
          onClick={[Function]}
          title=""
          type=""
        >
          Accept Cookies
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-long-arrow-right fa-w-14 sc-AxmLO bBecbL"
            data-icon="long-arrow-right"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            theme={
              Object {
                "size": Array [
                  16,
                  0.7,
                  16,
                ],
              }
            }
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M295.515 115.716l-19.626 19.626c-4.753 4.753-4.675 12.484.173 17.14L356.78 230H12c-6.627 0-12 5.373-12 12v28c0 6.627 5.373 12 12 12h344.78l-80.717 77.518c-4.849 4.656-4.927 12.387-.173 17.14l19.626 19.626c4.686 4.686 12.284 4.686 16.971 0l131.799-131.799c4.686-4.686 4.686-12.284 0-16.971L312.485 115.716c-4.686-4.686-12.284-4.686-16.97 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="sc-AxhUy csQPpo close-panels"
      >
        <p>
          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        </p>
      </div>
    </div>
  </div>
</div>
`;
